<?xml version="1.0" encoding="utf-8"?>
<resources>
    
<string name="app_name">嵌联科技通讯录</string>

<string name="name">姓名 :</string>
<string name="mobile">手机 :</string>
<string name="homenum">宅电 :</string>
<string name="address">地址 :</string>
<string name="email">邮箱 :</string>
<string name="group">组别 :</string>

<string name="postnum">邮编 :</string>
<string name="module">单位 :</string>
<string name="job">职务 :</string>
<string name="jobnum">工电 :</string>

<string name="save"> 保存 </string>
<string name="cancel"> 取消 </string>
<string name="contact_edit">编辑联系人</string>
<string name="contact_create">添加联系人</string>
<string name="error_msg">通讯录错误</string>
<string name="menu_revert">回退</string>
<string name="menu_delete">删除</string>
<string name="menu_discard">放弃</string>
<string name="menu_add">增加联系人</string>
<string name="menu_edit">编辑联系人</string>
<string name="menu_export">导出联系人</string>
<string name="menu_import">导入联系人</string>
<string name="is_export">确认导出</string>
<string name="is_import">确认导入</string>
<string name="code_export">加密导出</string>
<string name="uncode_export">一般导出</string>
<string name="file_name">文件名</string>

<string name="app_name_messaging">嵌联科技短信发送器</string>   
<string name="phonetext">请输入号码：</string>   
<string name="contexttext">请输入短信内容</string>   
<string name="buttontext">发送短信</string>   
<string name="info">短信发送成功</string>   
<string name="null_error">短信为空发送失败</string>   


<string name="submit">查询</string>
<string name="sort">排序</string>
<string name="searchArea">查询区域</string>
<string name="add">添加</string>
<string name="backToGroup">分组</string>


<string name="showgroup">分组信息</string>
<string name="group_add">增加分组</string>
<string name="group_name">分组名</string>
<string name="allGroup">All</string>

<string name="service_call">拨叫此号码</string>
<string name="service_message">发送短消息</string>

</resources>
