<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:background="@drawable/bg">

	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:paddingTop="5px"
		>

		<Button 
			android:id="@+id/backToGroup" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/backToGroup"
			/>

		<Button 
			android:id="@+id/add" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/add"
			android:layout_alignParentRight="true"
			/>
			
		<Button 
			android:id="@+id/sort" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/sort"
			android:layout_toLeftOf="@id/add"
			/>
			
		<Button 
			android:id="@+id/submitId" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/submit"
			android:layout_toLeftOf="@id/sort"
			/>
			
		<EditText 
			android:text="@string/searchArea" 
			android:id="@+id/searchArea"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_toLeftOf="@id/submitId"
			android:layout_toRightOf="@id/backToGroup"
			/>

	</RelativeLayout>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent" 
		android:background="@drawable/bg"
		android:layout_weight="2"
		>
		
		<ListView 
			android:id="@id/android:list" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:drawSelectorOnTop="false"
			android:scrollbars="horizontal"
			/>
	
	</LinearLayout>
</LinearLayout>