<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:background="@drawable/bg"
	>

	<TableRow 
		android:id="@+id/TableRow01" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingTop="5px"
		>
		
		<TextView 
			android:id="@+id/TextView01" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/name"
			android:textSize="16px"
			android:paddingLeft="5px"
			android:paddingRight="5px"
			/>
		
		<EditText 
			android:id="@+id/EditText01" 
			android:layout_height="wrap_content"
			android:layout_width="fill_parent" 
			/>
			
	</TableRow>
	
	<TableRow 
		android:id="@+id/TableRow02" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		
		<TextView 
			android:id="@+id/TextView02" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:textSize="16px"
			android:text="@string/mobile"
			android:paddingLeft="5px"
			android:paddingRight="5px"
			/>
		
		<EditText 
			android:id="@+id/EditText02" 
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			/>

	</TableRow>
	
	<TableRow 
		android:id="@+id/TableRow03" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		
		<TextView 
			android:id="@+id/TextView03" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/email"
			android:textSize="16px"
			android:paddingLeft="5px"
			android:paddingRight="5px"
			/>
		
		<EditText 
			android:id="@+id/EditText03" 
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			/>
	
	</TableRow>
	
	<TableRow 
		android:id="@+id/TableRow04" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		
		<TextView 
			android:id="@+id/TextView03" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/group"
			android:textSize="16px"
			android:paddingLeft="5px"
			android:paddingRight="5px"
			/>
		
		<Spinner android:id="@+id/Spinner01"    
           android:layout_width="fill_parent"  
           android:layout_height="wrap_content"></Spinner>  
	</TableRow>
	
	<TableRow 
		android:id="@+id/TableRow05" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		
		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			>
			
			<Button 
				android:id="@+id/Button02" 
				android:layout_height="wrap_content"
				android:text="@string/cancel" 
				android:textSize="16px"
				android:layout_width="wrap_content"
				android:layout_alignParentRight="true"
				/>
				
			<Button 
				android:id="@+id/Button01" 
				android:layout_height="wrap_content"
				android:text="@string/save" 
				android:textSize="16px"
				android:layout_width="wrap_content"
				android:layout_toLeftOf="@id/Button02"				
				/>
		
		</RelativeLayout>
	
	</TableRow>
	
</LinearLayout>